Perkin-UAT/force-app/main/default/objects/Custom_CaseAudit__mdt/Custom_CaseAudit__mdt.object-meta.xml
<CustomObject>
    <label>Custom Case Audit</label>
    <pluralLabel>Custom Case Audits</pluralLabel>
</CustomObject>