Perkin-UAT/force-app/main/default/objects/Custom_CaseAudit__mdt/fields/Case_Audit_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Case_Audit_API_Name__c</fullName>
    <label>Case Audit API Name</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>