Perkin-UAT/force-app/main/default/objects/Custom_CaseAudit__mdt/fields/Field__c.field-meta.xml
<CustomField>
    <fullName>Field__c</fullName>
    <label>Field Mdt</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>