Perkin-UAT/force-app/main/default/objects/Custom_CaseAudit__mdt/fields/Record_TypeId__c.field-meta.xml
<CustomField>
    <fullName>Record_TypeId__c</fullName>
    <label>Record Type Id</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>